--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,3 +1,15 @@
-<h2>This is new homepage</h2>
+<h1>Password generator</h1>
 
-{{ password }}
+<form action="">
+    <select name="length">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="5">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+    </select>
+
+    <input type="submit" value="Generate password"> 
+</form>
