--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,14 +1,16 @@
 <h1>Password generator</h1>
 
-<form action="">
+<form action="password">
     <select name="length">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="5">4</option>
-        <option value="5">5</option>
         <option value="6">6</option>
         <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12" selected="selected">12</option>
+        <option value="13">12</option>
+        <option value="14">12</option>
     </select>
 
     <input type="submit" value="Generate password"> 
