--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -12,6 +12,19 @@
         <option value="13">12</option>
         <option value="14">12</option>
     </select>
+    <br>
 
-    <input type="submit" value="Generate password"> 
+    <br>
+    <input type="checkbox" name="uppercase"> Uppercase
+    <br>
+
+    <br>
+    <input type="checkbox" name="numbers"> Numbers
+    <br>
+
+    <br>
+    <input type="checkbox" name="special symbols"> Special symbols
+    <br>
+
+    <input type="submit" name="generate_password_button" value="Generate password"> 
 </form>
