--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -22,3 +22,6 @@
 
     <input type="submit" value="Generate Password" class="btn btn-primary">
   </form>
+
+  <br>
+  <a href="{% url 'about' %}">About</a>
