--- a/generator/templates/generator/about.html
+++ b/generator/templates/generator/about.html
@@ -1,1 +1,7 @@
-<h1>This is about page</h1>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+<div class="container text-center">
+  <h1>About</h1>
+  <p>This is a pasword generator created by dosart. Enjoy fam!</p>
+  <a href="{% url 'home' %}" class="btn btn-info">Home</a>
+</div>
