--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,6 +1,9 @@
-<h1>Password generator</h1>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-<form action="{% url 'password' %}">
+<div class="container text-center">
+  <h1>Password Generator</h1>
+
+  <form action="{% url 'password' %}">
     <select name="length">
       <option value="6">6</option>
       <option value="7">7</option>
@@ -21,7 +24,6 @@
     <br>
 
     <input type="submit" value="Generate Password" class="btn btn-primary">
+    <a href="{% url 'about' %}" class="btn btn-info">About</a>
   </form>
-
-  <br>
-  <a href="{% url 'about' %}">About</a>
+</div>
