--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,8 +1,18 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-<div class="container text-center">
-  <h1>Your password is:</h1>
-  <h2 class="alert alert-success">{{ password }}</h2>
-  <a href="{% url 'home' %}" class="btn btn-info">Home</a>
-  <a href="{% url 'about' %}" class="btn btn-info">About</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your password</title>
+</head>
+<body style="background-color: #f0f0f0;">
+  <div class="container text-center">
+    <h1>Your password is:</h1>
+    <h2 class="alert alert-success">{{ password }}</h2>
+    <a href="{% url 'home' %}" class="btn btn-info">Home</a>
+    <a href="{% url 'about' %}" class="btn btn-info">About</a>
+  </div>
+</body>
+</html>
